Fix font-size scaling on iPhone

--- a/src/media/sass/_reset.sass
+++ b/src/media/sass/_reset.sass
@@ -11,6 +11,8 @@ body
 	font: normal #{$default-font-size}/1.4 Arial, sans-serif
 	color: #000
 	background: #FFF
+	+mobile
+		-webkit-text-size-adjust: 100%
 
 img, fieldset
 	border: 0
